Desenvolvimento do Controle de Estoque de Almoxarifado

--- a/Almoxarifado/nbproject/project.properties
+++ b/Almoxarifado/nbproject/project.properties
@@ -30,11 +30,12 @@ dist.jar=${dist.dir}/Almoxarifado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
